# auth-server

./: .gitignore  .pre-commit-config.yaml  .sqruff  Cargo.toml  README.md  config.yaml  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
migrations/: 20260606093727_create_users_table.sql
src/: cache.rs  error.rs  logging.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs  users.rs
src/handlers/: auth.rs  health.rs
src/services/: auth.rs  jwt.rs  mod.rs  session.rs
