[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
axum = "0.8.9"
axum-prometheus = "0.10.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["yaml", "env"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
lettre = { version = "0.11.22", features = ["tokio1-native-tls", "smtp-transport"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
